--- a/project/common-impl/src/main/resources/config.yml
+++ b/project/common-impl/src/main/resources/config.yml
@@ -1,5 +1,3 @@
-
-
 #         Powered by TabooLib 6.0         #
 
 
@@ -17,3 +15,14 @@ Durability:
   display-symbol:
     0: ◆
     1: ◇
+
+SoulBind:
+  enable: true
+  lore: "灵魂绑定: %player%"
+  deny-inventory: true
+  deny-anvil: true
+  deny-craft: true
+  deny-pickup: true
+  deny-drop: true
+  deny-consume: true
+
